<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0">
    <GridView
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:gravity="center"
        android:numColumns="2"
        android:focusable="true"
        android:clickable="true"
        tools:listitem="@layout/grid_item_layout"
        android:columnWidth="50dp"
        android:layout_margin="5dp" />

</RelativeLayout>